--- a/assets/code/reduce-1-functional.example
+++ b/assets/code/reduce-1-functional.example
@@ -4,6 +4,10 @@ const stocks = [
   { symbol: "JXJ", price: 120.22, volume: 5323 },
 ]
 
-// Get stock symbols
-// example via https://egghead.io/lessons/javascript-the-array-map-method
-// https://jsbin.com/wucixew/
+const totalVolume = stocks.reduce(function(acc, currStock) {
+   acc += currStock.volume
+   return acc;
+}, 0)
+
+console.log(totalVolume)
+
